examples/test/testpolicy6245.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6245
  namespace: namespace310
spec:
  podSelector:
    matchLabels:
      key46: value38
      key28: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value43
          key7: value10
          key30: value6
      podSelector:
        matchLabels:
          key23: value44
          key39: value9
